@@ -16,6 +16,7 @@ Revision history for Net-Silverpeak-Orchestrator
     - add delete_addressgroup method
     - add update_addressgroup method
     - add list_servicegroup_names method
+    - add list_servicegroups method
 
 0.001002  2021-02-19 07:35:30+01:00 Europe/Vienna
     - fix Data::Dumper::Concise usage in t/api.t
